--- a/PROGRAMAS BUSQUEDAS/templates/Amplitud.html
+++ b/PROGRAMAS BUSQUEDAS/templates/Amplitud.html
@@ -13,12 +13,11 @@
 {% endblock %}
 
 {% block texto %}
-    Explora todos los nodos 
-    en un nivel antes de pasar al siguiente, garantizando que se encuentre 
-    la solución más cercana al nodo inicial. Utiliza una cola para mantener 
-    los nodos a explorar y es ideal para problemas donde las soluciones 
-    están distribuidas uniformemente. Sin embargo, puede consumir mucha 
-    memoria si el árbol de búsqueda es amplio y profundo.
+    Explora todos los nodos en un nivel antes de pasar al siguiente,
+    garantizando que se encuentre la solución más cercana al nodo inicial. 
+    Utiliza una cola para mantener los nodos a explorar y es ideal para
+    problemas donde las soluciones están distribuidas uniformemente.
+    Sin embargo, puede consumir mucha memoria si el árbol de búsqueda es amplio y profundo.
 {% endblock %}
 
 {% block scripts %} 
