--- a/PROGRAMAS BUSQUEDAS/templates/maestra.html
+++ b/PROGRAMAS BUSQUEDAS/templates/maestra.html
@@ -13,12 +13,12 @@
         <div id="campoCuadro">
             <h4 class="tittle">OTROS ALGORITMOS</h4>
             <div id="cuadro">
-                <a class="" href="{{url_for('amplitud')}}">Amplitud</a>
-                <a class="ccompletoooo" href="{{url_for('costoUniforme')}}">Costo Uniforme</a>
-                <a class="" href="{{url_for('profundidadLimitada')}}">Profundidad Limitada</a>
-                <a class="" href="{{url_for('mejorOpcion')}}">Mejor Opcion</a>
-                <a class="ccompletoooo" href="{{url_for('aestrella')}}">A*</a>
-                <a class="ccompletoooo" href="{{url_for('voraz')}}">Voraz</a>
+                <a href="{{url_for('amplitud')}}">Amplitud</a>
+                <a href="{{url_for('costoUniforme')}}">Costo Uniforme</a>
+                <a href="{{url_for('profundidadLimitada')}}">Profundidad Limitada</a>
+                <a class="ccompletoooo" href="{{url_for('mejorOpcion')}}">Mejor Opcion</a>
+                <a href="{{url_for('aestrella')}}">A*</a>
+                <a href="{{url_for('voraz')}}">Voraz</a>
             </div>
         </div>
         
