--- a/PROGRAMAS BUSQUEDAS/templates/AEstrella.html
+++ b/PROGRAMAS BUSQUEDAS/templates/AEstrella.html
@@ -5,12 +5,14 @@
 {% endblock %}
 
 {% block texto %}
+
     Se combina el coste acumulado desde el nodo inicial 
     con una heurística que estima el coste hasta el objetivo, utilizando 
-    la función f(n) = g(n) + h(n). Este enfoque garantiza encontrar el 
+    la función f(n) = g(n) + h(n). <br>
+    Este enfoque garantiza encontrar el 
     camino más corto si la heurística es admisible y es eficiente al 
-    priorizar nodos, lo que lo convierte en una opción popular en 
-    aplicaciones de búsqueda de rutas y juegos.
+    priorizar nodos.
+
 {% endblock %} 
 
 {% block estilos %}
