--- a/PROGRAMAS BUSQUEDAS/templates/CostoUniforme.html
+++ b/PROGRAMAS BUSQUEDAS/templates/CostoUniforme.html
@@ -13,13 +13,14 @@
 {% endblock %}
 
 {% block texto %} 
-    Explora nodos en un 
-    gráfico considerando el costo total acumulado para llegar a cada 
-    nodo desde el nodo inicial. Utiliza una cola de prioridad para 
-    seleccionar el nodo con el costo más bajo para ser explorado a 
-    continuación. Este enfoque garantiza encontrar la solución óptima 
-    en escenarios donde los costos de las transiciones entre nodos 
-    pueden variar, ya que siempre elige la ruta más barata primero. 
+    Explora nodos en un gráfico considerando el costo total acumulado
+    para llegar a cada nodo desde el nodo inicial seleccionando el nodo con el costo más bajo para
+    ser explorado a continuación. 
+    
+    Este enfoque garantiza encontrar la solución óptima en escenarios donde los 
+    costos de las transiciones entre nodos pueden variar, ya que siempre 
+    elige la ruta más barata primero.
+
     Es especialmente útil en problemas donde los caminos tienen 
     diferentes costos y se busca minimizar el costo total.
 {% endblock %}
