--- a/PROGRAMAS BUSQUEDAS/templates/Voraz.html
+++ b/PROGRAMAS BUSQUEDAS/templates/Voraz.html
@@ -16,7 +16,7 @@
     Toma decisiones basadas en la heurística para 
     seleccionar el siguiente nodo a explorar, eligiendo el que parece más prometedor 
     según su costo estimado hacia el objetivo. Aunque puede ser más rápida que otros algoritmos, 
-    ya que explora menos nodos, no garantiza una solución óptima, ya que puede ignorar rutas más 
+    ya que explora menos nodos, no garantiza una solución óptima, porque puede ignorar rutas más 
     largas que conducen a una mejor solución.
 {% endblock %}
 
