--- a/juegoMarioAEstrella_test/style.css
+++ b/juegoMarioAEstrella_test/style.css
@@ -5,15 +5,11 @@
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #1f2d38;
+    background-color: #19161d;
     font-size: 1.1vw;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-image: url('img/background_transparente.png');
-    /* background-position: center; */
-    /* background-repeat: no-repeat; */
-    /* background-size: cover; */
 }
 
 .body_busqueda {
@@ -40,10 +36,10 @@ body {
         "tabla front front front"    
         "explorados front front front"
         ; */
-    grid-template-columns: auto 10vw;
+    grid-template-columns: auto auto;
     grid-template-areas:
-        "tabla control"
-        "tabla nodo"
+        "tabla tabla"
+        "control nodo"
         "texto texto"
         "explorados explorados"    
         "front front "
@@ -65,13 +61,14 @@ body {
 .cell {
     /* background-color: #eee; */
     border: 1px solid #ccc;
+    color: white;
     text-align: center;
     transition: background-color 0.3s ease;
     align-items: center;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    background-image: url('img/piso.png');
+    /* background-image: url('img/piso.png'); */
     z-index: 1;
     background-size: cover;
 }
@@ -92,30 +89,14 @@ body {
     background-color: red;
     background-image: url('img/bloque.png');
     z-index: 2;
-    background-size: contain;
-    /* ba */
-    
+    background-size: cover;
 }
 
 .wall {
-    z-index: 2;
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    color: white;
-    background-color: #913923;
-}
-
-.muro {
     background-image: url('img/muro.png');
-}
-
-.hongo {
-    background-image: url('img/goomba-walking.gif');
-}
-
-.tortuga {
-    background-image: url('img/koopa-troopa-koopa.gif');
+    z-index: 2;
+    background-size: cover;
+    color: white;
 }
 
 .open {
@@ -226,7 +207,7 @@ body {
 #campoNodo .mario {
     height: 50px;
     width: 50px;
-    background-image: url('img/2d-mario-running.gif');
+    background-image: url('img/mario.png');
     background-size: cover;
 }
 
