--- a/juegoMarioAEstrella/style.css
+++ b/juegoMarioAEstrella/style.css
@@ -103,7 +103,7 @@ body {
     background-position: center;
     background-repeat: no-repeat;
     color: white;
-    background-color: #913923;
+    background-color: #861b00;
 }
 
 .muro {
