--- a/juegoMarioAEstrella/style.css
+++ b/juegoMarioAEstrella/style.css
@@ -1,12 +1,14 @@
 :root {
     --sizeCell: 30px;
-    --colorRuta: #fffb14c4;
+    --colorRuta: #ffd000ab;
+    --mobTransform: rotateX(-20deg) scaleY(1.35) translateY(-20px) ;
+    --structTransform: rotateX(-20deg) scaleY(1.35) translateY(-8px) ;
 }
 
 body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background-color: #1f2d38;
-    font-size: 1.1vw;
+    font-size: 12px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -26,20 +28,6 @@ body {
     row-gap: 0.3vw;
     display: grid;
     justify-items: center;
-    /* grid-template-columns: auto 20vw 30vw; */
-    /* grid-template-areas:
-        "tabla nodo control"
-        "tabla texto texto"    
-        "tabla explorados explorados"
-        "front explorados explorados"
-        "front explorados explorados"
-        ; */
-    /* grid-template-columns: auto 10vw 10vw 17vw;
-    grid-template-areas:
-        "tabla nodo control texto"
-        "tabla front front front"    
-        "explorados front front front"
-        ; */
     grid-template-columns: auto 10vw;
     grid-template-areas:
         "tabla control"
@@ -56,24 +44,39 @@ body {
     flex-direction: column;
     align-self: flex-start;
     align-items: center;
+    perspective: 500px;
 }
 
 #grid {    
     display: grid;
+    perspective: 300px;
+    transform: rotateX(30deg) translateY(-60px);
+    gap: 1px;
+    /* background-color: #47ce47; */
+    /* transform-style: preserve-3d; */
+    background-image: url('img/W1Lawn00_DM_alb.png');
+    background-size: cover;
 }
 
 .cell {
-    /* background-color: #eee; */
-    border: 1px solid #ccc;
+    /* border: 1px solid #ccc; */
     text-align: center;
     transition: background-color 0.3s ease;
     align-items: center;
     display: flex;
     justify-content: center;
     flex-direction: column;
-    background-image: url('img/piso.png');
     z-index: 1;
     background-size: cover;
+    color: #000000c4;
+}
+
+.cell_1 {
+    background-color: #25742577;
+}
+
+.cell_2 {
+    background-color: #47ce476e;
 }
 
 .cell p {
@@ -83,60 +86,81 @@ body {
 
 .start {
     background-color: green;
-    background-image: url('img/2d-mario-running.gif');
-    z-index: 3;
+    background-image: url('img/mario_run.gif');
     background-size: cover;
 }
 
 .goal {
-    background-color: red;
-    background-image: url('img/bloque.png');
-    z-index: 2;
+    background-color: #00000000;
+    background-image: url('img/block.png');
+    /* z-index: 2; */
     background-size: contain;
-    /* ba */
-    
+    transform: rotateX(-20deg) scaleY(1.35) translateY(-15px) ;
+    scale: 1.3;
 }
 
 .wall {
-    z-index: 2;
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
     color: white;
-    background-color: #861b00;
+    background-color: #00000000;
+    border-color: #00000000;
 }
 
 .muro {
     background-image: url('img/muro.png');
+    transform: var(--structTransform);
 }
 
 .hongo {
-    background-image: url('img/goomba-walking.gif');
+    background-image: url('img/goomba-walking.gif'); 
+    transform: var(--mobTransform);
+    scale: 1.2;
 }
 
 .tortuga {
-    background-image: url('img/koopa-troopa-koopa.gif');
+    background-image: url('img/koopa-bah-bah.gif');
+    transform: var(--mobTransform);
+    scale: 1.2;
 }
 
 .open {
-    /* background-color: lightgreen; */
-    z-index: 3;
-    background-image: url('img/2d-mario-running.gif');
+    background-image: url('img/mario_run.gif');
     background-size: cover;
     background-size: contain;
     background-repeat: no-repeat;
-    opacity: 0.8;
-    background-color: #b1482e;
+    background-color: #00000000;
+    transform: var(--mobTransform);
+    scale: 1.3;
+    color: white;
 }
 
 .closed {
-    color: white;
-    background-color: #b1482e;
+    background-color: #0000005d;
 }
 
 .path {
-    background-color:var(--colorRuta);
+    background-color: var(--colorRuta);
+    color: black;
 }
+
+.goal.path {
+    background-image: url('img/mario-64-gangname-style.gif');
+    background-size: cover;
+    background-size: contain;
+    background-color: #00000000;
+    scale: 2;
+}
+
+/* .start.path {
+    background-image: url('img/mario-64-gangname-style.gif');
+    background-size: cover;
+    background-size: contain;
+    background-color: #00000000;
+    scale: 2;
+} */
+
 
 /* RUTA */
 
@@ -261,9 +285,7 @@ body {
 
 .table-column {
     display: grid;
-    /* flex-direction: column; */
     grid-template-rows: 1.7fr 1fr 1fr;
-    /* align-items: center; */
     border: 2px solid rgb(255, 255, 255); 
     background-color: #333; 
     padding: 2px;
@@ -271,20 +293,22 @@ body {
 }
 
 .table-cell {
-    /* border: 1px solid rgb(255, 255, 255);  */
     padding: 5px;
     color: #333;
     background-color: white; 
     text-align: center;
     align-self: center;
-    /* display: flex; */
-    /* flex-direction: column; */
-    /* border-bottom: 1px solid #444; */
+    flex-direction: column;
+    display: flex;
 }
 
 .table-cell p {
     margin: 0;
     padding: 0;
+}
+
+.final-path {
+    background-color: var(--colorRuta);
 }
 
 /* BOTONES */
