--- a/PROGRAMAS BUSQUEDAS/templates/maestra.html
+++ b/PROGRAMAS BUSQUEDAS/templates/maestra.html
@@ -16,7 +16,7 @@
                 <a href="{{url_for('amplitud')}}">Amplitud</a>
                 <a href="{{url_for('costoUniforme')}}">Costo Uniforme</a>
                 <a href="{{url_for('profundidadLimitada')}}">Profundidad Limitada</a>
-                <a class="ccompletoooo" href="{{url_for('mejorOpcion')}}">Mejor Opcion</a>
+                <a href="{{url_for('mejorOpcion')}}">Mejor Opcion</a>
                 <a href="{{url_for('aestrella')}}">A*</a>
                 <a href="{{url_for('voraz')}}">Voraz</a>
             </div>
