--- a/PROGRAMAS BUSQUEDAS/templates/maestra.html
+++ b/PROGRAMAS BUSQUEDAS/templates/maestra.html
@@ -13,12 +13,12 @@
         <div id="campoCuadro">
             <h4 class="tittle">OTROS ALGORITMOS</h4>
             <div id="cuadro">
-                <a href="{{url_for('amplitud')}}">Amplitud</a>
-                <a href="{{url_for('costoUniforme')}}">Costo Uniforme</a>
-                <a href="{{url_for('profundidadLimitada')}}">Profundidad Limitada</a>
-                <a href="{{url_for('mejorOpcion')}}">Mejor Opcion</a>
-                <a href="{{url_for('aestrella')}}">A*</a>
-                <a href="{{url_for('voraz')}}">Voraz</a>
+                <a class="busq_ni" href="{{url_for('amplitud')}}">Amplitud</a>
+                <a class="busq_ni" href="{{url_for('costoUniforme')}}">Costo Uniforme</a>
+                <a class="busq_ni" href="{{url_for('profundidadLimitada')}}">Profundidad Limitada</a>
+                <a class="busq_i" href="{{url_for('mejorOpcion')}}">Mejor Opcion</a>
+                <a class="busq_i" href="{{url_for('aestrella')}}">A*</a>
+                <a class="busq_i" href="{{url_for('voraz')}}">Voraz</a>
             </div>
         </div>
         
@@ -45,17 +45,17 @@
         </div>
             
         <div id="campoExplorados">
-            <h4 class="tittle">Explorados</h4>
+            <h4 class="tittle">EXPLORADOS</h4>
             <div id="Explorados"></div>
         </div>
     
         <div id="campoNodo">
-            <h4 class="tittle">Nodo</h4>
+            <h4 class="tittle">NODO</h4>
             <div id="Nodo"></div>
         </div>
     
         <div id="campoRuta">
-            <h4 class="tittle">Ruta</h4>
+            <h4 class="tittle">RUTA</h4>
             <div id="Ruta"></div>
         </div>
     </div>    
