--- a/Sistema Experto/backup/css/style.css
+++ b/Sistema Experto/backup/css/style.css
@@ -25,12 +25,12 @@ body {
     row-gap: 0.3vw;
     display: grid;
     justify-items: center;
-    grid-template-columns: 40% auto auto;
+    grid-template-columns: 50% auto 30%;
     grid-template-areas:
-        "ruta ruta control"
-        "tabla tabla accion"
-        "tabla tabla consola"
-        "output output output"
+        "tabla control texto"
+        "tabla control accion"
+        "tabla explorados accion"
+        "tabla explorados accion"
         ;
 }
 
@@ -43,6 +43,7 @@ body {
     perspective: 500px;
 }
 
+
 #grid {    
     display: grid;
     perspective: 300px;
@@ -51,12 +52,8 @@ body {
     /* background-color: #47ce47; */
     /* transform-style: preserve-3d; */
     background-image: url('../img/W1Lawn00_DM_alb.png');
-    /* background-color: #000000c5; */
     background-size: cover;
-    gap: 5px;
 }
-
-/* Elementos tablero */
 
 .cell {
     /* border: 1px solid #ccc; */
@@ -72,11 +69,11 @@ body {
 }
 
 .cell_1 {
-    background-color: #177e178c;
+    background-color: #25742577;
 }
 
 .cell_2 {
-    background-color: #2ec22e8e;
+    background-color: #47ce476e;
 }
 
 .cell p {
@@ -85,11 +82,9 @@ body {
 }
 
 .start {
-    background-color: #00000000;
+    background-color: green;
     background-image: url('../img/mario_run.gif');
     background-size: cover;
-    transform: var(--mobTransform);
-
 }
 
 .goal {
@@ -125,13 +120,12 @@ body {
     background-image: url('../img/bowser-walking-ezgif.com-cut.gif');
     transform: var(--mobTransform);
     scale: 1.2;
-    background-color: #00000000;
 }
 
 .open {
     background-size: contain;
     background-repeat: no-repeat;
-    background-color: transparent;
+    background-color: #00000000;
     transform: var(--mobTransform);
     scale: 1.3;
     color: white;
@@ -147,7 +141,7 @@ body {
 }
 
 .follow {
-    background-color: #ca5d0473;
+    background-color: #ca5d04a9;
     color: black;
 }
 
@@ -156,7 +150,6 @@ body {
     color: black;
 }
 
-.happy_enemy,
 .start.enemy {
     background-image: url('../img/bowser_happy.gif');
     background-size: contain;
@@ -177,10 +170,9 @@ body {
 }
 
 .lose_enemy {
-    background-image: url('../img/bowser_sad.gif');
+    background-image: url('../img/koopa-bah-bah.gif');
     background-size: contain;
     background-color: black;
-    scale:1.5;
 }
 
 /* RUTA */
@@ -191,7 +183,7 @@ body {
     flex-direction: column;
     align-items: center;
     gap: 10px;
-    grid-area: ruta;
+    grid-area: texto;
 }
 
 #ruta {
@@ -216,37 +208,40 @@ body {
     align-items: center;    
 }
 
-/* Cuadro Texto */
 
-.cuadroTexto {
+/* NODOS EXPLORADOS */
+
+#campoExplorados {
+    align-self: flex-start;
+    grid-area: explorados;
+    color: white;
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 10px;
 }
 
-.cuadroTexto > div {
+#Explorados {
+    color: white;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 20px;
+    flex-wrap: wrap;
+    gap: 10px;
 }
 
-.cuadroTexto div div{
-    width: 350px;
-    height: 200px;
-    overflow-y: auto;
-    border: 2px solid #ccc;
-    margin-top: 20px;
-    color: #89fbff;
-    border-radius: 20px;
-    background-color: #121216;
-    font-size: 110%;
-    font-family: monospace;
-    padding: 20px;
-}
-
-.cuadroTexto div div p {
+#Explorados p {
+    padding: 10px;
     margin: 0;
+    text-align: center;
+    align-items: center;    
+    background-color: #b1482e;
+    background-image: url('../img/piso.png');
+    background-size: cover;
+    height: var(--sizeCell);
+    width: var(--sizeCell);
+}
+
+.tittle{
+    color:white;
 }
 
 /* Acciones de Sistema Experto */
@@ -259,7 +254,13 @@ body {
 }
 
 #cuadro_acciones {
-    
+    width: 300px;
+    height: 300px;
+    overflow-y: auto;
+    border: 2px solid #ccc;
+    padding: 10px;
+    margin-top: 20px;
+    color: white;
 }
 
 #acciones {
@@ -268,17 +269,85 @@ body {
     line-height: 1.5;
 }
 
-/* Output Prolog */
+/* NODO */
 
-#campoOutput {
+#campoNodo {
+    /* align-self: flex-start; */
+    grid-area: nodo;
     color: white;
-    grid-area: output;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
-/* Consola */
+#Nodo {
+    height: var(--sizeCell);
+    width: var(--sizeCell);
+}
 
-#campoConsola {
-    grid-area: consola;
+#campoNodo .mario {
+    height: 50px;
+    width: 50px;
+    background-image: url('../img/2d-mario-running.gif');
+    background-size: cover;
+}
+
+#Nodo p {
+    padding: 10px;
+    margin: 0;
+    border-radius: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* color: black; */
+}
+
+/* FRONTERA */
+
+#campoFrontera {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    grid-area: front;
+}
+
+#Frontera {
+    color: white;
+    justify-content: center;
+    display: flex;
+    flex-wrap: wrap; 
+    gap: 10px; 
+    /* max-width: 100%; */
+    overflow-x: auto;
+}
+
+.table-column {
+    display: grid;
+    grid-template-rows: 1.7fr 1fr 1fr;
+    border: 2px solid rgb(255, 255, 255); 
+    background-color: #333; 
+    padding: 2px;
+    gap: 2px;
+}
+
+.table-cell {
+    padding: 5px;
+    color: #333;
+    background-color: white; 
+    text-align: center;
+    align-self: center;
+    flex-direction: column;
+    display: flex;
+}
+
+.table-cell p {
+    margin: 0;
+    padding: 0;
+}
+
+.final-path {
+    background-color: var(--colorRuta);
 }
 
 /* BOTONES */
@@ -286,6 +355,7 @@ body {
 #controles {
     grid-area: control;
     display: flex;
+    flex-direction: column;
     gap: 15px;
 }
 
@@ -308,8 +378,3 @@ body {
 #iniciar:disabled {
     background-color: #333333;
 }
-
-.tittle {
-    color: white;
-}
-
